Update image repository in values.yaml

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,6 @@
 test:
   deploymentName: hello-deployment
-  image: us-central1-docker.pkg.dev/****/docker-repo/hello:1.0.9
+  image: us-central1-docker.pkg.dev/healthy-booth-386907/docker-repo/hello:1.0.9
   replicas: 2
   serviceName: hello-service
   servicetype: NodePort
